@@ -6,6 +6,7 @@ Next version:
 2.6 (????-??-??)
 
 * support table of contents and links in ebook UI
+* added a document measurement helper (invoke by pressing M)
 * swapped keybindings:
   * F11 : Fullscreen mode (still also Ctrl+Shift+L)
   * F5  : Presentation mode (also Shift+F11, still also Ctrl+L)
